# speedtest-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install-latest.sh
src/: main.rs
