[package]
name = "speedtest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
indicatif = "0.17.7"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
clickhouse = { version = "0.13.1", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
